Name:                sqlconvert
Version:             0.1
Synopsis:            Convert SQL Server database dump scripts to PostgreSQL load script
License:             BSD3
Author:              Finlay Thompson
Maintainer:          finlay@dragonfly.co.nz
Copyright:           Copyright (c)2013, Finlay Thompson
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.2

Executable sqlconvert
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5,
                     attoparsec   >= 0.10,
                     time,
                     old-locale,
                     bytestring
